# CodeSteward

./: .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRACTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  codesteward_phased_build_plan.md  deny.toml  go.mod  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  release.yml
actions/github/: action.yml
cmd/codesteward/: main.go
crates/steward-cli/: Cargo.toml
crates/steward-cli/src/: main.rs
crates/steward-cli/tests/: cli_contract.rs  schema_examples.rs
crates/steward-engine/: Cargo.toml
crates/steward-engine/src/: lib.rs
crates/steward-policy/: Cargo.toml
crates/steward-policy/src/: lib.rs
crates/steward-report/: Cargo.toml
crates/steward-report/src/: lib.rs
docs/: cli.md  codeowners.md  config.md  faq.md  getting-started.md  github.md  gitlab.md  non-goals.md  platform-support.md  product-contract.md  product-spec.md  reports.md  rules.md  troubleshooting.md
docs/adr/: 0001-core-language-runtime.md  0002-local-storage-sqlite.md  0003-public-code-license.md  0004-ai-boundary.md  0005-repository-non-execution.md  0006-supported-platform-policy.md  0007-phase-1-native-release-matrix.md  README.md  template.md
docs/contributing/: development.md
docs/governance/: contributor-ladder.md  release-and-deprecation.md
docs/release/: README.md  dependency-policy.md  process.md  supply-chain-sources.md  verification.md  workspace-boundaries.md
docs/rfc/: README.md  template.md
docs/security/: dependency-exceptions.md  dependency-policy.md  threat-model.md  vulnerability-handling.md
examples/typescript-package/: .codesteward.yaml  CODEOWNERS  README.md  package.json
gitlab/: codesteward.gitlab-ci.yml
internal/cli/: cli.go  cli_test.go
internal/codeowners/: codeowners.go  codeowners_test.go  match.go
internal/config/: config.go  config_test.go
internal/diff/: diff.go  diff_test.go
internal/git/: git.go  git_test.go
internal/globs/: globs.go  globs_test.go
internal/ownership/: ownership.go  ownership_test.go
internal/readiness/: readiness.go  readiness_test.go
internal/report/: report.go  report_test.go
internal/rules/: rules.go  rules_test.go
internal/tests/: tests.go  tests_test.go
internal/version/: version.go
pkg/engine/: engine.go  engine_test.go
pkg/model/: model.go  rules.go
scripts/: README.md  install.sh
scripts/ci/: check_cli_determinism.py  (+11 more)
(+73 files in other folders)
