[workspace]
members = [
    "crates/steward-cli",
    "crates/steward-engine",
    "crates/steward-policy",
    "crates/steward-report",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
clap = { version = "4.6.1", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
jsonschema = { version = "0.47.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_ignored = "0.1.14"
serde_json = "1.0.150"
yaml_serde = "0.10.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
