[package]
name = "steward-cli"
description = "Offline-first command-line interface for Steward"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "steward"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
steward-engine = { path = "../steward-engine" }

[dev-dependencies]
jsonschema.workspace = true

[lints]
workspace = true
