[package]
name = "steward-engine"
description = "Reusable deterministic engine APIs for the Steward CLI and integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
steward-policy = { path = "../steward-policy" }
steward-report = { path = "../steward-report" }

[lints]
workspace = true
