[package]
name = "steward-policy"
description = "Typed, non-executable configuration and policy primitives for Steward"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_ignored.workspace = true
yaml_serde.workspace = true

[lints]
workspace = true
