[package]
name = "steward-report"
description = "Stable public report models for the Steward maintenance-intelligence engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true

[lints]
workspace = true
